--- a/arithmetic_practice/index9.html
+++ b/arithmetic_practice/index9.html
@@ -112,42 +112,26 @@
         }
         #answer::-webkit-outer-spin-button,
         #answer::-webkit-inner-spin-button,
-        #addMin1::-webkit-outer-spin-button,
-        #addMin1::-webkit-inner-spin-button,
-        #addMax1::-webkit-outer-spin-button,
-        #addMax1::-webkit-inner-spin-button,
-        #addMin2::-webkit-outer-spin-button,
-        #addMin2::-webkit-inner-spin-button,
-        #addMax2::-webkit-outer-spin-button,
-        #addMax2::-webkit-inner-spin-button,
-        #subMin1::-webkit-outer-spin-button,
-        #subMin1::-webkit-inner-spin-button,
-        #subMax1::-webkit-outer-spin-button,
-        #subMax1::-webkit-inner-spin-button,
-        #subMin2::-webkit-outer-spin-button,
-        #subMin2::-webkit-inner-spin-button,
-        #subMax2::-webkit-outer-spin-button,
-        #subMax2::-webkit-inner-spin-button,
-        #mulMin1::-webkit-outer-spin-button,
-        #mulMin1::-webkit-inner-spin-button,
-        #mulMax1::-webkit-outer-spin-button,
-        #mulMax1::-webkit-inner-spin-button,
-        #mulMin2::-webkit-outer-spin-button,
-        #mulMin2::-webkit-inner-spin-button,
-        #mulMax2::-webkit-outer-spin-button,
-        #mulMax2::-webkit-inner-spin-button,
-        #divMin1::-webkit-outer-spin-button,
-        #divMin1::-webkit-inner-spin-button,
-        #divMax1::-webkit-outer-spin-button,
-        #divMax1::-webkit-inner-spin-button,
-        #divMin2::-webkit-outer-spin-button,
-        #divMin2::-webkit-inner-spin-button,
-        #divMax2::-webkit-outer-spin-button,
-        #divMax2::-webkit-inner-spin-button {
+        #addMin::-webkit-outer-spin-button,
+        #addMin::-webkit-inner-spin-button,
+        #addMax::-webkit-outer-spin-button,
+        #addMax::-webkit-inner-spin-button,
+        #subMin::-webkit-outer-spin-button,
+        #subMin::-webkit-inner-spin-button,
+        #subMax::-webkit-outer-spin-button,
+        #subMax::-webkit-inner-spin-button,
+        #mulMin::-webkit-outer-spin-button,
+        #mulMin::-webkit-inner-spin-button,
+        #mulMax::-webkit-outer-spin-button,
+        #mulMax::-webkit-inner-spin-button,
+        #divMin::-webkit-outer-spin-button,
+        #divMin::-webkit-inner-spin-button,
+        #divMax::-webkit-outer-spin-button,
+        #divMax::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
-        #answer[type=number], #addMin1[type=number], #addMax1[type=number], #addMin2[type=number], #addMax2[type=number], #subMin1[type=number], #subMax1[type=number], #subMin2[type=number], #subMax2[type=number], #mulMin1[type=number], #mulMax1[type=number], #mulMin2[type=number], #mulMax2[type=number], #divMin1[type=number], #divMax1[type=number], #divMin2[type=number], #divMax2[type=number] {
+        #answer[type=number], #addMin[type=number], #addMax[type=number], #subMin[type=number], #subMax[type=number], #mulMin[type=number], #mulMax[type=number], #divMin[type=number], #divMax[type=number] {
             -moz-appearance: textfield;
         }
         #upcoming-questions {
@@ -191,36 +175,28 @@
         </label>
         <label>
             <input type="checkbox" id="addition" checked>Addition
-            <input type="number" id="addMin1" value="2" placeholder="Min 1">
-            <input type="number" id="addMax1" value="9" placeholder="Max 1">
-            <input type="number" id="addMin2" value="2" placeholder="Min 2">
-            <input type="number" id="addMax2" value="9" placeholder="Max 2">
+            <input type="number" id="addMin" value="2">
+            <input type="number" id="addMax" value="9">
         </label>
         <label>
             <input type="checkbox" id="subtraction">Subtraction
-            <input type="number" id="subMin1" value="2" placeholder="Min 1">
-            <input type="number" id="subMax1" value="9" placeholder="Max 1">
-            <input type="number" id="subMin2" value="2" placeholder="Min 2">
-            <input type="number" id="subMax2" value="9" placeholder="Max 2">
+            <input type="number" id="subMin" value="2">
+            <input type="number" id="subMax" value="9">
         </label>
         <label>
             <input type="checkbox" id="multiplication" checked>Multiplication
-            <input type="number" id="mulMin1" value="2" placeholder="Min 1">
-            <input type="number" id="mulMax1" value="9" placeholder="Max 1">
-            <input type="number" id="mulMin2" value="2" placeholder="Min 2">
-            <input type="number" id="mulMax2" value="9" placeholder="Max 2">
+            <input type="number" id="mulMin" value="2">
+            <input type="number" id="mulMax" value="9">
         </label>
         <label>
             <input type="checkbox" id="division">Division
-            <input type="number" id="divMin1" value="2" placeholder="Min 1">
-            <input type="number" id="divMax1" value="9" placeholder="Max 1">
-            <input type="number" id="divMin2" value="2" placeholder="Min 2">
-            <input type="number" id="divMax2" value="9" placeholder="Max 2">
+            <input type="number" id="divMin" value="2">
+            <input type="number" id="divMax" value="9">
         </label>
         <label>
             <input type="checkbox" id="squares">Squares
-            <input type="number" id="squaresMin" value="2" placeholder="Min">
-            <input type="number" id="squaresMax" value="9" placeholder="Max">
+            <input type="number" id="squaresMin" value="2">
+            <input type="number" id="squaresMax" value="9">
         </label>
         <label>
             <input type="button" id="toggleSound" value="Sound: Off" onclick="toggleSound()">
@@ -266,36 +242,28 @@
 
             switch (operation) {
                 case '+':
-                    const addMin1 = parseInt(document.getElementById('addMin1').value) || 2;
-                    const addMax1 = parseInt(document.getElementById('addMax1').value) || 9;
-                    const addMin2 = parseInt(document.getElementById('addMin2').value) || 2;
-                    const addMax2 = parseInt(document.getElementById('addMax2').value) || 9;
-                    const aAdd = getRandomInt(addMin1, addMax1);
-                    const bAdd = getRandomInt(addMin2, addMax2);
+                    const addMin = parseInt(document.getElementById('addMin').value) || 2;
+                    const addMax = parseInt(document.getElementById('addMax').value) || 9;
+                    const aAdd = getRandomInt(addMin, addMax);
+                    const bAdd = getRandomInt(addMin, addMax);
                     return { question: `${aAdd} + ${bAdd}`, answer: aAdd + bAdd };
                 case '-':
-                    const subMin1 = parseInt(document.getElementById('subMin1').value) || 2;
-                    const subMax1 = parseInt(document.getElementById('subMax1').value) || 9;
-                    const subMin2 = parseInt(document.getElementById('subMin2').value) || 2;
-                    const subMax2 = parseInt(document.getElementById('subMax2').value) || 9;
-                    const aSub = getRandomInt(subMin1, subMax1);
-                    const bSub = getRandomInt(subMin2, subMax2);
+                    const subMin = parseInt(document.getElementById('subMin').value) || 2;
+                    const subMax = parseInt(document.getElementById('subMax').value) || 9;
+                    const aSub = getRandomInt(subMin, subMax);
+                    const bSub = getRandomInt(subMin, subMax);
                     return { question: `${aSub} - ${bSub}`, answer: aSub - bSub };
                 case '*':
-                    const mulMin1 = parseInt(document.getElementById('mulMin1').value) || 2;
-                    const mulMax1 = parseInt(document.getElementById('mulMax1').value) || 9;
-                    const mulMin2 = parseInt(document.getElementById('mulMin2').value) || 2;
-                    const mulMax2 = parseInt(document.getElementById('mulMax2').value) || 9;
-                    const aMul = getRandomInt(mulMin1, mulMax1);
-                    const bMul = getRandomInt(mulMin2, mulMax2);
+                    const mulMin = parseInt(document.getElementById('mulMin').value) || 2;
+                    const mulMax = parseInt(document.getElementById('mulMax').value) || 9;
+                    const aMul = getRandomInt(mulMin, mulMax);
+                    const bMul = getRandomInt(mulMin, mulMax);
                     return { question: `${aMul} * ${bMul}`, answer: aMul * bMul };
                 case '/':
-                    const divMin1 = parseInt(document.getElementById('divMin1').value) || 2;
-                    const divMax1 = parseInt(document.getElementById('divMax1').value) || 9;
-                    const divMin2 = parseInt(document.getElementById('divMin2').value) || 2;
-                    const divMax2 = parseInt(document.getElementById('divMax2').value) || 9;
-                    const aDiv = getRandomInt(divMin1, divMax1);
-                    const bDiv = getRandomInt(divMin2, divMax2);
+                    const divMin = parseInt(document.getElementById('divMin').value) || 2;
+                    const divMax = parseInt(document.getElementById('divMax').value) || 9;
+                    const aDiv = getRandomInt(divMin, divMax);
+                    const bDiv = getRandomInt(divMin, divMax);
                     const numerator = aDiv * bDiv; // Ensure the numerator is a multiple of bDiv
                     return { question: `${numerator} / ${bDiv}`, answer: numerator / bDiv };
                 case '^2':
